terraform/main/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-to-backends
  namespace: retail-app
  annotations:
    alb.ingress.kubernetes.io/tags: Project=tinyuka-2025-capstone
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: retail-store-ui
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: retail-store-catalog
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: retail-store-carts
